argocd/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: budget-app
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
